--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.8.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
